Have gateway check if stuff is really meant for it
Don't want regular traffic (e.g. blasted through the hub) to be proxied, particularly ICMP.